added OpenAiService for sending requests to openai. Service has public method processPrompt which takes prompt and returns ready-to-use string(answer from ai)